# BW-Fetcher

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  challenge_scripts.cpp  challenge_scripts.h  decompress.cpp  decompress.h  fetcher.cpp  fetcher.h  html_catalog.cpp  html_catalog.h  main.cpp  platform_win.h
.github/workflows/: release.yml
.gitlab/ci/: bw-fetcher-py-release.yml
BORING_SSL/: Boring_SSL_Client_.cpp  Boring_SSL_Client_.h
BORING_SSL/Profile_Loader/: tls_config.h  tls_profiles.cpp  tls_profiles.h
BORING_SSL/compresser/: brotili_cert_compress.cpp  brotili_cert_compress.h
HTTP2_Client/: http2_client.cpp  http2_client.h
PROXY/: proxy_socket5_handshake.cpp  proxy_socket5_handshake.h
URL_to_DNS/: URL_Parser.cc  URL_Parser.h  resolve_host.cpp  resolve_host.h
benchmarks/: BASELINE.md  README.md  pytest.ini  requirements.txt  run.py  test_benchmark.py  urls.json
benchmarks/bench/: __init__.py  models.py  report.py  runner.py
benchmarks/bench/clients/: __init__.py  base.py  bw_fetcher.py  curl_cffi_client.py  curl_client.py  httpx_client.py  requests_client.py  urllib_client.py
python/: .gitignore  README.md  RELEASING.md  pyproject.toml  setup.py
python/bw_fetcher_py/: __init__.py  _locate.py  binary_names.py  cli.py  probe.py
python/bw_fetcher_py/detection/: __init__.py  analyzer.py  models.py  script_urls.py  signatures.py
python/scripts/: stage_binaries.py
scripts/: build_cpp_linux.sh  build_cpp_windows.ps1  package_release.py  test_bet365_fetch_scripts.ps1
